--- a/docs/docs/components/select.mdx
+++ b/docs/docs/components/select.mdx
@@ -316,6 +316,7 @@ const options = [
 | isSearchable      |                                                                `boolean`                                                                |     `false`      |        Yes |
 | error             |                                                                `boolean`                                                                |     `false`      |        Yes |
 | maxDropDownHeight |                                                                `string`                                                                 |      `auto`      |        Yes |
+| minHeight         |                                                                `string`                                                                 |      `40px`      |        Yes |
 | borderRadius      |                                                                `string`                                                                 |       `0`        |        Yes |
 | onChange          |                                                     `(selectedOption,event)=>void`                                                      |     `()=>{}`     |        Yes |
 | isDisabled        |                                                                `boolean`                                                                |     `false`      |        Yes |
