bug :  fixed portal

--- a/docs/docs/components/select.mdx
+++ b/docs/docs/components/select.mdx
@@ -317,6 +317,7 @@ const options = [
 | error             |                                                                `boolean`                                                                |     `false`      |        Yes |
 | maxDropDownHeight |                                                                `string`                                                                 |      `auto`      |        Yes |
 | minHeight         |                                                                `string`                                                                 |      `40px`      |        Yes |
+| zIndex            |                                                                `string`                                                                 |       `0`        |        Yes |
 | borderRadius      |                                                                `string`                                                                 |       `0`        |        Yes |
 | onChange          |                                                     `(selectedOption,event)=>void`                                                      |     `()=>{}`     |        Yes |
 | isDisabled        |                                                                `boolean`                                                                |     `false`      |        Yes |
@@ -326,6 +327,7 @@ const options = [
 | onDropDownOpen    |                                                              `()=> void `                                                               |                  |        Yes |
 | onDropDownClose   |                                                              `()=> void `                                                               |                  |        Yes |
 | isLoading         |                                                                `boolean`                                                                |     `false`      |        Yes |
+| useDropdownPortal |                                                                `boolean`                                                                |     `false`      |        Yes |
 | loadingOptions    |                                                 **[Loading Options](#loading-option)**                                                  |     `false`      |        Yes |
 
 ### Option Object
