refactor: refactored badge component types

--- a/docs/docs/components/badge.mdx
+++ b/docs/docs/components/badge.mdx
@@ -107,7 +107,7 @@ import { Badge } from "@hover-design/react";
 | :--------- | :--------------------------------------------------------------------: | ---------: |
 | color      |                                `string`                                |        Yes |
 | textColor  |                                `string`                                |        Yes |
-| label      |                                `string`                                |         No |
+| label      |                          `string` `ReactNode`                          |         No |
 | shape      |                   `rounded` &#124; `rounded-circle`                    |        Yes |
 | hide       |                               `boolean;`                               |        Yes |
 | position   | `top-start` &#124; `top-end` &#124; `bottom-start` &#124; `bottom-end` |        Yes |
