Moves rendering from library side to consumer side

--- a/docs/docs/components/nativeSelect.mdx
+++ b/docs/docs/components/nativeSelect.mdx
@@ -6,7 +6,6 @@ Here's a quick start guide to get started with the nativeSelect component
 
 ### Importing Component
 
-import "@hover-design/react/dist/style.css";
 import { NativeSelect } from "@hover-design/react";
 import { useState } from "react";
 
@@ -122,10 +121,7 @@ const options = [
 ];
 
 <div className="App">
-  <NativeSelect
-    borderRadius={"60px"}
-    options={options}
-  />
+  <NativeSelect borderRadius={"60px"} options={options} />
 </div>;
 ```
 
