--- a/docs/docs/components/radio.mdx
+++ b/docs/docs/components/radio.mdx
@@ -6,11 +6,10 @@ Here's a quick start guide to get started with the Radio component, Radios are f
 
 ### Importing Component
 
-import "@hover-design/react/dist/style.css";
 import { Radio, RadioGroup, Card } from "@hover-design/react";
 import {
   RadioExample,
-  RadioGroupExample
+  RadioGroupExample,
 } from "@site/src/components/examples/RadioExample";
 
 export const RadioContainer = ({ children }) => (
@@ -104,7 +103,7 @@ const Demo = () => {
     radioSize="xs"
     selectedStyles={{
       borderColor: "rgb(25, 113, 194)",
-      backgroundColor: "rgb(25, 113, 194)"
+      backgroundColor: "rgb(25, 113, 194)",
     }}
   />
   <Radio name="antColony" value="weaver" radioSize="sm" checked />
@@ -115,7 +114,7 @@ const Demo = () => {
     radioSize="md"
     selectedStyles={{
       borderColor: "rgb(224, 49, 49)",
-      backgroundColor: "rgb(224, 49, 49)"
+      backgroundColor: "rgb(224, 49, 49)",
     }}
   />
 </div>
@@ -127,7 +126,7 @@ const Demo = () => {
     radioSize="xs"
     selectedStyles={{
       borderColor: "rgb(25, 113, 194)",
-      backgroundColor: "rgb(25, 113, 194)"
+      backgroundColor: "rgb(25, 113, 194)",
     }}
   />
   <RadioExample radioSize="sm" checked />
@@ -136,7 +135,7 @@ const Demo = () => {
     radioSize="md"
     selectedStyles={{
       borderColor: "rgb(224, 49, 49)",
-      backgroundColor: "rgb(224, 49, 49)"
+      backgroundColor: "rgb(224, 49, 49)",
     }}
   />
 </RadioContainer>
