fix: includes util function to map defined values and upated Radio component

--- a/docs/docs/components/radio.mdx
+++ b/docs/docs/components/radio.mdx
@@ -144,8 +144,8 @@ const Demo = () => {
 
 | Key            |              type               | Optional? |
 | :------------- | :-----------------------------: | --------: |
-| value          |            `string;`            |        No |
-| name           |            `string;`            |        No |
+| value          |            `string;`            |       Yes |
+| name           |            `string;`            |       Yes |
 | radioSize      | `xs` `sm` `md` `lg` `xl` string |       Yes |
 | isDisabled     |            `boolean`            |       Yes |
 | baseStyles     |       `baseStyles object`       |       Yes |
