fix: trigger netlify deployment

--- a/docs/docs/components/accordion.mdx
+++ b/docs/docs/components/accordion.mdx
@@ -2,7 +2,7 @@
 
 ### Quick start
 
-Here's a quick start guide to get started with the Accordion component
+Here is a quick start guide to get started with the Accordion component
 
 ### Importing Component
 
