--- a/docs/docs/components/table.mdx
+++ b/docs/docs/components/table.mdx
@@ -290,6 +290,8 @@ import {
 | horizontalSpacing           |               `string`                |      `0`      |        Yes |
 | overrideTableClass          |               `string`                |       -       |        Yes |
 | overrideTableContainerClass |               `string`                |       -       |        Yes |
+| wrapperStyle                |          `CSS Style Object`           |       -       |        Yes |
+| wrapperClassName            |               `string`                |       -       |        Yes |
 
 The table component renders a `div` that wraps the table to not allow the table to overflow the parent, this can be customized by sending a class to `overrideTableContainerClass`
 
